setup page update and text overlap fix

--- a/src/app/munch-setup/munch-setup.component.css
+++ b/src/app/munch-setup/munch-setup.component.css
@@ -61,7 +61,7 @@
 }
 
 .text {
-  z-index: 2;
+  z-index: 1.5;
   color: whitesmoke;
   text-align: center;
   font-size: 30px;
